--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,15 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  build_runner: ^2.1.4
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   intl: ^0.17.0
+  json_annotation: ^4.1.0
+  json_serializable: ^5.0.2
   provider: ^6.0.0
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
